--- a/shared-org/shared-inbox.org
+++ b/shared-org/shared-inbox.org
@@ -1,5 +1,8 @@
 * Shared Incoming 
 
+1910 calculus
+https://www.gutenberg.org/files/33283/33283-pdf.pdf
+
 L-functions
 https://www.youtube.com/watch?v=4bzSFNCiKrk
 
